@@ -290,7 +290,7 @@ static WUR iwrc _db_at(IWKV iwkv, IWDB *dbp, off_t addr, uint8_t *mm) {
   }
   db->open = true;
   *dbp = db;
-
+  
 finish:
   if (rc)  {
     pthread_rwlock_destroy(&db->rwl);
@@ -428,7 +428,7 @@ static WUR iwrc _db_destroy_lw(IWDB *dbp) {
   IWFS_FSM *fsm = &db->iwkv->fsm;
   uint32_t first_sblkn;
   bool dec_worker = true;
-
+  
   kh_del(DBS, db->iwkv->dbs, db->id);
   rc = fsm->acquire_mmap(fsm, 0, &mm, 0);
   RCRET(rc);
@@ -542,7 +542,7 @@ static WUR iwrc _db_create_lw(IWKV iwkv, dbid_t dbid, iwdb_flags_t dbflg, IWDB *
   }
   db->open = true;
   *odb = db;
-
+  
 finish:
   if (mm) {
     fsm->release_mmap(fsm);
@@ -740,7 +740,7 @@ static WUR iwrc _kvblk_at_mm(IWLCTX *lx, off_t addr, uint8_t *mm, KVBLK *kbp, KV
   kb->szpow = 0;
   kb->flags = 0;
   memset(kb->pidx, 0, sizeof(kb->pidx));
-
+  
   *blkp = 0;
   rp = mm + addr;
   memcpy(&kb->szpow, rp, 1);
@@ -775,7 +775,7 @@ static WUR iwrc _kvblk_at_mm(IWLCTX *lx, off_t addr, uint8_t *mm, KVBLK *kbp, KV
   if (!kbp) {
     AAPOS_INC(lx->kaan);
   }
-
+  
 finish:
   return rc;
 }
@@ -868,7 +868,7 @@ static WUR iwrc _kvblk_compact_mm(KVBLK *kb, uint8_t *mm) {
   uint8_t *wp = mm + blkend;
   memcpy(tidx, kb->pidx, sizeof(tidx));
   ks_mergesort_kvblk(KVBLK_IDXNUM, tidx, tidx_tmp);
-
+  
   coff = 0;
   for (i = 0; i < KVBLK_IDXNUM && tidx[i].off; ++i) {
 #ifndef NDEBUG
@@ -947,10 +947,10 @@ static WUR iwrc _kvblk_rmkv(KVBLK *kb, uint8_t idx, kvblk_rmkv_opts_t opts) {
       }
       rc = fsm->acquire_mmap(fsm, 0, &mm, 0);
       RCGO(rc, finish);
-
+      
       rc = _kvblk_compact_mm(kb, mm);
       RCGO(rc, finish);
-
+      
       off_t maxoff = _kvblk_maxkvoff(kb);
       memmove(mm + kb->addr + (1ULL << npow) - maxoff,
               mm + kb->addr + nlen - maxoff,
@@ -975,7 +975,7 @@ static WUR iwrc _kvblk_rmkv(KVBLK *kb, uint8_t idx, kvblk_rmkv_opts_t opts) {
     }
     IWRC(_kvblk_sync_mm(kb, mm), rc);
   }
-
+  
 finish:
   if (mm) {
     fsm->release_mmap(fsm);
@@ -1003,7 +1003,7 @@ static WUR iwrc _kvblk_addkv(KVBLK *kb,
   IWDLSNR *dlsnr = kb->db->iwkv->dlsnr;
   IWKV_val *uval = (IWKV_val *) val, sval;
   off_t psz = IW_VNUMSIZE(key->size) + key->size + uval->size; // required KVP size
-
+  
   if (kb->zidx < 0) {
     return _IWKV_ERROR_KVBLOCK_FULL;
   }
@@ -1035,14 +1035,14 @@ static WUR iwrc _kvblk_addkv(KVBLK *kb,
     }
     return IWKV_ERROR_MAXKVSZ;
   }
-
+  
 start:
   // [szpow:u1,idxsz:u2,[ps0:vn,pl0:vn,..., ps32,pl32]____[[KV],...]] // KVBLK
   msz = (1ULL << kb->szpow) - (KVBLK_HDRSZ + kb->idxsz + kb->maxoff);
   assert(msz >= 0);
   noff = kb->maxoff + psz;
   rsz = psz + IW_VNUMSIZE(noff) + IW_VNUMSIZE(psz);
-
+  
   if (msz < rsz) { // not enough space
     if (!compacted) {
       compacted = true;
@@ -1060,10 +1060,10 @@ start:
     off_t nsz = rsz - msz + nlen;
     off_t naddr = kb->addr;
     off_t olen = nlen;
-
+    
     uint8_t npow = kb->szpow;
     while ((1ULL << ++npow) < nsz);
-
+    
     rc = fsm->allocate(fsm, (1ULL << npow), &naddr, &nlen, IWKV_FSM_ALLOC_FLAGS);
     RCGO(rc, finish);
     assert(nlen == (1ULL << npow));
@@ -1080,7 +1080,7 @@ start:
     fsm->release_mmap(fsm);
     rc = fsm->deallocate(fsm, kb->addr, olen);
     RCGO(rc, finish);
-
+    
     kb->addr = naddr;
     kb->szpow = npow;
   }
@@ -1120,7 +1120,7 @@ start:
     rc = dlsnr->onwrite(dlsnr, kb->addr + (1ULL << kb->szpow) - kvp->off, sptr, wp - sptr, 0);
   }
   fsm->release_mmap(fsm);
-
+  
 finish:
   if (uval != val) {
     _kv_val_dispose(uval);
@@ -1148,11 +1148,11 @@ static WUR iwrc _kvblk_updatev(KVBLK *kb,
   size_t kbsz = 1ULL << kb->szpow; // kvblk size
   off_t freesz = kbsz - KVBLK_HDRSZ - kb->idxsz - kb->maxoff; // free space available
   IWFS_FSM *fsm = &db->iwkv->fsm;
-
+  
   iwrc rc = fsm->acquire_mmap(fsm, 0, &mm, 0);
   RCRET(rc);
   assert(freesz >= 0);
-
+  
   // DUP
   if (!internal && (db->dbflg & IWDB_DUP_FLAGS)) {
     if (((db->dbflg & IWDB_DUP_UINT32_VALS) && val->size != 4) ||
@@ -1179,7 +1179,7 @@ static WUR iwrc _kvblk_updatev(KVBLK *kb,
     uint8_t vbuf[8];
     uint32_t avail = len - (4 /* num items */ + sz * val->size);
     _num2lebuf(vbuf, val->data, val->size);
-
+    
     if (opflags & IWKV_DUP_REMOVE) {
       if (!sz) {
         rc = IWKV_ERROR_NOTFOUND;
@@ -1327,7 +1327,7 @@ static WUR iwrc _kvblk_updatev(KVBLK *kb,
       }
     }
   }
-
+  
 finish:
   if (uval != val) {
     _kv_val_dispose(uval);
@@ -1451,11 +1451,11 @@ static WUR iwrc _sblk_create(IWLCTX *lx, int8_t nlevel, int8_t kvbpow, off_t bad
   *oblk = 0;
   rc = fsm->allocate(fsm, SBLK_SZ + kvblksz, &baddr, &blen, IWKV_FSM_ALLOC_FLAGS);
   RCRET(rc);
-
+  
   assert(blen - SBLK_SZ == kvblksz);
   _kvblk_create(lx, baddr + SBLK_SZ, kvblksz, kvbpow, &kvblk);
   RCRET(rc);
-
+  
   sblk = &lx->saa[lx->saan];
   sblk->db = lx->db;
   sblk->db->lcnt[nlevel]++;
@@ -1565,7 +1565,7 @@ static WUR iwrc _sblk_at2(IWLCTX *lx, off_t addr, sblk_flags_t flgs, SBLK *sblk)
       sblk->p0 = ADDR2BLK(lx->db->addr);
     }
   }
-
+  
 finish:
   fsm->release_mmap(fsm);
   return rc;
@@ -1625,7 +1625,7 @@ static WUR iwrc _sblk_sync_mm(IWLCTX *lx, SBLK *sblk, uint8_t *mm) {
       IW_WRITELV(wp, lv, sblk->p0);
       IW_WRITELV(wp, lv, sblk->kvblkn);
       memcpy(wp, sblk->pi, KVBLK_IDXNUM);
-
+      
       wp = mm + sblk->addr + SOFF_N0_U4;
       for (int i = 0; i <= sblk->lvl; ++i) {
         IW_WRITELV(wp, lv, sblk->n[i]);
@@ -2015,7 +2015,7 @@ static WUR iwrc _lx_roll_forward(IWLCTX *lx, uint8_t lvl) {
   SBLK *sblk;
   blkn_t blkn;
   assert(lx->lower);
-
+  
   while ((blkn = lx->lower->n[lvl])) {
     off_t blkaddr = BLK2ADDR(blkn);
     if (lx->nlvl > -1 && lvl < lx->nlvl) {
@@ -2159,13 +2159,13 @@ static iwrc _lx_split_addkv(IWLCTX *lx, int idx, SBLK *sblk) {
   IWDB db = sblk->db;
   bool uside = (idx == sblk->pnum);
   register int pivot = (KVBLK_IDXNUM / 2) + 1; // 32
-
+  
   if (uside) { // Upper side
     rc = _sblk_create(lx, lx->nlvl, 0, sblk->addr, &nb);
     RCRET(rc);
     rc = _sblk_addkv(nb, lx->key, lx->val, lx->opflags, false, true);
     RCGO(rc, finish);
-
+    
   } else { // New key is somewere in a middle of sblk->kvblk
     assert(sblk->kvblk);
     // We are in the middle
@@ -2182,10 +2182,10 @@ static iwrc _lx_split_addkv(IWLCTX *lx, int idx, SBLK *sblk) {
     sz += KVBLK_MAX_NKV_SZ;
     uint8_t kvbpow = iwlog2_64(sz);
     while ((1ULL << kvbpow) < sz) kvbpow++;
-
+    
     rc = _sblk_create(lx, lx->nlvl, kvbpow, sblk->addr, &nb);
     RCRET(rc);
-
+    
     IWKV_val key, val;
     IWFS_FSM *fsm = &lx->db->iwkv->fsm;
     for (int i = pivot, end = sblk->pnum; i < end; ++i) {
@@ -2212,7 +2212,7 @@ static iwrc _lx_split_addkv(IWLCTX *lx, int idx, SBLK *sblk) {
       }
     }
   }
-
+  
   // Fix levels:
   //  [ lb -> sblk -> ub ]
   //  [ lb -> sblk -> nb -> ub ]
@@ -2225,7 +2225,7 @@ static iwrc _lx_split_addkv(IWLCTX *lx, int idx, SBLK *sblk) {
     lx->plower[i]->flags |= SBLK_DURTY;
     nb->n[i] = ADDR2BLK(lx->pupper[i]->addr);
   }
-
+  
   pthread_spin_lock(&db->cursors_slk);
   for (IWKV_cursor cur = db->cursors; cur; cur = cur->next) {
     if (cur->cn && cur->cn->addr == sblk->addr) {
@@ -2238,7 +2238,7 @@ static iwrc _lx_split_addkv(IWLCTX *lx, int idx, SBLK *sblk) {
     }
   }
   pthread_spin_unlock(&db->cursors_slk);
-
+  
   if (!uside) {
     if (idx > pivot) {
       rc = _sblk_addkv(nb, lx->key, lx->val, lx->opflags, false, false);
@@ -2247,7 +2247,7 @@ static iwrc _lx_split_addkv(IWLCTX *lx, int idx, SBLK *sblk) {
     }
     RCGO(rc, finish);
   }
-
+  
 finish:
   if (rc) {
     lx->nb = 0;
@@ -2306,7 +2306,7 @@ static WUR iwrc _lx_addkv(IWLCTX *lx) {
     }
   }
   fsm->release_mmap(fsm);
-
+  
   if (found) {
     return _sblk_updatekv(sblk, idx, lx->key, lx->val, lx->opflags);
   } else {
@@ -2373,7 +2373,7 @@ IW_INLINE WUR iwrc _lx_get_lr(IWLCTX *lx) {
   } else {
     rc = IWKV_ERROR_NOTFOUND;
   }
-
+  
 finish:
   IWRC(fsm->release_mmap(fsm), rc);
   _lx_release_mm(lx, 0);
@@ -2439,7 +2439,7 @@ IW_INLINE WUR iwrc _lx_del_lw(IWLCTX *lx, bool exclusive) {
     rc = _sblk_rmkv(sblk, idx);
     RCGO(rc, finish);
   }
-
+  
 finish:
   if (mm) {
     fsm->release_mmap(fsm);
@@ -2478,7 +2478,7 @@ static WUR iwrc _dbcache_cmp_nodes(const void *v1, const void *v2, void *op, int
   uint32_t kl1 = c1->lkl, kl2 = c2->lkl;
   uint8_t *mm = 0;
   iwrc rc = 0;
-
+  
   *res = _cmp_key2(lx->db->dbflg, k1, kl1, k2, kl2);
   if (*res == 0 && (!c1->fullkey || !c2->fullkey)) {
     rc = fsm->acquire_mmap(fsm, 0, &mm, 0);
@@ -2497,7 +2497,7 @@ static WUR iwrc _dbcache_cmp_nodes(const void *v1, const void *v2, void *op, int
     }
     *res = _cmp_key(lx->db->dbflg, k1, kl1, k2, kl2);
   }
-
+  
 finish:
   if (mm) {
     fsm->release_mmap(fsm);
@@ -2629,7 +2629,7 @@ static WUR iwrc _dbcache_put_lw(IWLCTX *lx, SBLK *sblk) {
   DBCNODE *n = (DBCNODE *) dbcbuf;
   DBCACHE *cache = &db->cache;
   register size_t nsize = cache->nsize;
-
+  
   sblk->flags &= ~SBLK_CACHE_PUT;
   cache->atime = lx->ts;
   assert(sizeof(*cache) + sblk->lkl <= sizeof(dbcbuf));
@@ -2650,7 +2650,7 @@ static WUR iwrc _dbcache_put_lw(IWLCTX *lx, SBLK *sblk) {
   n->sblkn = ADDR2BLK(sblk->addr);
   n->kblkn = sblk->kvblkn;
   memcpy((uint8_t *)n + offsetof(DBCNODE, lk), sblk->lk, sblk->lkl);
-
+  
   idx = iwarr_sorted_find2(cache->nodes, cache->num, nsize, n, lx, &found, _dbcache_cmp_nodes);
   assert(!found);
   if (cache->asize <= cache->num * nsize) {
@@ -2750,7 +2750,7 @@ IW_INLINE WUR iwrc _cursor_get_ge_idx(IWLCTX *lx, IWKV_cursor_op op, uint8_t *oi
       *oidx = idx ? idx - 1 : idx;
     }
   }
-
+  
 finish:
   IWRC(fsm->release_mmap(fsm), rc);
   return rc;
@@ -2774,7 +2774,7 @@ static WUR iwrc _cursor_to_lr(IWKV_cursor cur, IWKV_cursor_op op) {
     }
     return 0;
   }
-
+  
 start:
   if (op < IWKV_CURSOR_EQ) { // IWKV_CURSOR_NEXT | IWKV_CURSOR_PREV
     blkn_t n = 0;
@@ -2847,7 +2847,7 @@ start:
       lx->lower = 0;
     }
   }
-
+  
 finish:
   if (rc && rc != IWKV_ERROR_NOTFOUND && cur->cn) {
     _sblk_release(lx, &cur->cn);
@@ -2994,20 +2994,20 @@ iwrc iwkv_open(const IWKV_OPTS *opts, IWKV *iwkvp) {
 #if defined(IW_TESTS) && !defined(IW_RELEASE)
   fsmopts.oflags |= IWFSM_STRICT;
 #endif
-
+  
   // Init WAL
   rc = iwal_create(iwkv, opts, &fsmopts);
   RCGO(rc, finish);
-
+  
   // Now open main database file
   rc = iwfs_fsmfile_open(&iwkv->fsm, &fsmopts);
   RCGO(rc, finish);
-
+  
   IWFS_FSM *fsm  = &iwkv->fsm;
   iwkv->dbs = kh_init(DBS);
   rc = fsm->state(fsm, &fsmstate);
   RCGO(rc, finish);
-
+  
   // Database header: [magic:u4, first_addr:u8, db_format_version:u4]
   if (fsmstate.exfile.file.ostatus & IWFS_OPEN_NEW) {
     uint8_t hdr[KVHDRSZ] = {0};
@@ -3044,7 +3044,7 @@ iwrc iwkv_open(const IWKV_OPTS *opts, IWKV *iwkvp) {
     fsm->release_mmap(fsm);
   }
   (*iwkvp)->open = true;
-
+  
 finish:
   if (rc) {
     (*iwkvp)->open = true; // will be closed in iwkv_close
@@ -3154,6 +3154,7 @@ iwrc iwkv_db(IWKV iwkv, uint32_t dbid, iwdb_flags_t dbflg, IWDB *dbp) {
     return IW_ERROR_READONLY;
   }
   rc = iwkv_exclusive_lock(iwkv);
+  RCRET(rc);
   ki = kh_get(DBS, iwkv->dbs, dbid);
   if (ki != kh_end(iwkv->dbs)) {
     db = kh_value(iwkv->dbs, ki);
@@ -3172,6 +3173,33 @@ iwrc iwkv_db(IWKV iwkv, uint32_t dbid, iwdb_flags_t dbflg, IWDB *dbp) {
   }
   return rc;
 }
+
+iwrc iwkv_new_db(IWKV iwkv, iwdb_flags_t dbflg, uint32_t *dbidp, IWDB *dbp) {
+  *dbp = 0;
+  *dbidp = 0;
+  if (iwkv->oflags & IWKV_RDONLY) {
+    return IW_ERROR_READONLY;
+  }
+  uint32_t dbid = 0;
+  iwrc rc = iwkv_exclusive_lock(iwkv);
+  RCRET(rc);
+  for (khiter_t k = kh_begin(iwkv->dbs); k != kh_end(iwkv->dbs); ++k) {
+    if (!kh_exist(iwkv->dbs, k)) continue;
+    uint32_t id = kh_key(iwkv->dbs, k);
+    if (id > dbid) dbid = id;
+  }
+  dbid++;
+  rc = _db_create_lw(iwkv, dbid, dbflg, dbp);
+  if (!rc) {
+    rc = iwal_checkpoint(iwkv, true);
+  }
+  if (!rc)   {
+    *dbidp = dbid;
+  }
+  iwkv_exclusive_unlock(iwkv);
+  return rc;
+}
+
 
 iwrc iwkv_db_cache_release(IWDB db) {
   if (!db || !db->iwkv) {
@@ -3217,7 +3245,7 @@ iwrc iwkv_db_destroy(IWDB *dbp) {
     rc = _db_destroy_lw(dbp);
   }
   iwkv_exclusive_unlock(iwkv);
-
+  
 finish:
   return rc;
 }
@@ -3251,7 +3279,7 @@ iwrc iwkv_put(IWDB db, const IWKV_val *key, const IWKV_val *val, iwkv_opflags op
     RCGO(rc, finish);
   }
   rc = _lx_put_lw(&lx);
-
+  
 finish:
   API_DB_UNLOCK(db, rci, rc);
   if (!rc) {
@@ -3288,7 +3316,7 @@ iwrc iwkv_get(IWDB db, const IWKV_val *key, IWKV_val *oval) {
     }
   }
   rc = _lx_get_lr(&lx);
-
+  
 finish:
   API_DB_UNLOCK(db, rci, rc);
   return rc;
@@ -3301,7 +3329,7 @@ iwrc iwkv_db_set_meta(IWDB db, void *buf, size_t sz) {
   if (!sz) {
     return 0;
   }
-
+  
   int rci;
   iwrc rc = 0;
   uint32_t lv;
@@ -3309,7 +3337,7 @@ iwrc iwkv_db_set_meta(IWDB db, void *buf, size_t sz) {
   uint8_t *mm = 0, *wp, *sp;
   IWFS_FSM *fsm = &db->iwkv->fsm;
   size_t asz = IW_ROUNDUP(sz, 1 << IWKV_FSM_BPOW);
-
+  
   API_DB_WLOCK(db, rci);
   if (asz > db->meta_blkn || asz * 2 <= db->meta_blkn) {
     off_t oaddr = 0;
@@ -3344,7 +3372,7 @@ iwrc iwkv_db_set_meta(IWDB db, void *buf, size_t sz) {
   }
   fsm->release_mmap(fsm);
   mm = 0;
-
+  
 finish:
   if (mm) {
     fsm->release_mmap(fsm);
@@ -3374,7 +3402,7 @@ iwrc iwkv_db_get_meta(IWDB db, void *buf, size_t sz, size_t *rsz) {
   RCGO(rc, finish);
   memcpy(buf, mm + BLK2ADDR(db->meta_blk), rmax);
   *rsz = rmax;
-
+  
 finish:
   if (mm) {
     fsm->release_mmap(fsm);
@@ -3494,7 +3522,7 @@ iwrc iwkv_cursor_open(IWDB db,
     RCGO(rc, finish);
   }
   rc = _cursor_to_lr(cur, op);
-
+  
 finish:
   if (cur) {
     if (rc) {
@@ -3607,7 +3635,7 @@ iwrc iwkv_cursor_get(IWKV_cursor cur,
   } else {
     rc = IW_ERROR_INVALID_ARGS;
   }
-
+  
 finish:
   if (mm) {
     fsm->release_mmap(fsm);
@@ -3640,7 +3668,7 @@ iwrc iwkv_cursor_copy_val(IWKV_cursor cur, uint8_t *vbuf, size_t vbufsz, size_t 
   _kvblk_peek_val(cur->cn->kvblk, idx, mm, &oval, &ovalsz);
   *vsz = ovalsz;
   memcpy(vbuf, oval, MIN(vbufsz, ovalsz));
-
+  
 finish:
   if (mm) {
     fsm->release_mmap(fsm);
@@ -3675,7 +3703,7 @@ iwrc iwkv_cursor_copy_key(IWKV_cursor cur, uint8_t *kbuf, size_t kbufsz, size_t 
   RCGO(rc, finish);
   *ksz = okeysz;
   memcpy(kbuf, okey, MIN(kbufsz, okeysz));
-
+  
 finish:
   if (mm) {
     fsm->release_mmap(fsm);
@@ -3774,7 +3802,7 @@ iwrc iwkv_cursor_dup_num(const IWKV_cursor cur, uint32_t *onum) {
   memcpy(&lv, vbuf, sizeof(lv));
   lv = IW_ITOHL(lv);
   *onum = lv;
-
+  
 finish:
   if (mm) {
     fsm->release_mmap(fsm);
@@ -3825,7 +3853,7 @@ iwrc iwkv_cursor_dup_contains(const IWKV_cursor cur, uint64_t dv, bool *out) {
     dv = IW_HTOILL(dv);
     *out = (iwarr_sorted_find(rp, num, elsz, &dv, _u8cmp) != -1);
   }
-
+  
 finish:
   if (mm) {
     fsm->release_mmap(fsm);
@@ -3912,7 +3940,7 @@ iwrc iwkv_cursor_dup_iter(const IWKV_cursor cur,
     }
   }
 #undef _VBODY
-
+  
 finish:
   if (mm) {
     fsm->release_mmap(fsm);
